--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
+@media (max-width: 75em) {  /* 1200px */
+    html{
+    font-size:80.25%;/*1 rem = 9px, 9/16 = 50% */
+}}
 
+body{
+    color: blue !important;
+}
 /* Navbar */
 .navbar-nav{
 padding-top: 2rem;
@@ -10,8 +17,6 @@ padding-top: 2rem;
 }
 .nav-link:hover{
     border-bottom: 1px solid #fff;
-/* transition: all .2s; */
-/* transform: cap 1s infinit; */
 }
 .nav-link{
 cursor: pointer;
@@ -435,7 +440,7 @@ margin-top: 33.5rem !important;
     padding-bottom: 5rem !important;
     }}
     
-@media (max-width: 29.8125em) {  /* 1318px */
+@media (max-width: 29.875em) {  /* 1318px */
     .story-heading{
         padding-top: 33rem !important;
     padding-right: 4rem;
@@ -499,7 +504,16 @@ margin-left: 10rem ;
             /* margin: 0 auto; */
         }}
         
-@media (max-width: 28.8125em) {  /* 1318px */
+@media (max-width: 28.875em) {  /* 1318px */
+    .story-text-responsive-1{
+            width: 50% !important;
+            /* margin-top: 5rem ; */
+            position: relative;
+            left: -1.5rem !important;
+            margin-top: -5rem !important;
+        }}
+        
+@media (max-width: 28.75em) {  /* 1318px */
     .story-text-responsive-1{
             width: 50% !important;
             /* margin-top: 5rem ; */
@@ -507,7 +521,6 @@ margin-left: 10rem ;
             left: -6.5rem !important;
             margin-top: 3rem !important;
         }}
-        
     @media (max-width: 25.3125em) {  /* 1318px */
         .story-text-responsive-1{
                 width: 50% !important;
@@ -517,6 +530,14 @@ margin-left: 10rem ;
                 /* margin-right: 10.25rem !important; */
                 }}
                 
+    @media (max-width: 25.25em) {  /* 1318px */
+        .story-text-responsive-1{
+                width: 50% !important;
+                /* margin-top: 26rem !important; */
+                position: relative;
+                left: -6rem !important;
+                /* margin-right: 10.25rem !important; */
+                }}
     @media (max-width: 24.0625em) {  /* 1318px */
         .story-text-responsive-1{
                 width: 50% !important;
@@ -561,7 +582,7 @@ margin-left: 10rem ;
                 margin-top: 15rem !important;
 
                 position: relative;
-                left: -2rem;
+                left: -1rem;
                 /* margin-right: 10.25rem !important; */
                 }}
         @media (max-width: 60em) {  /* 1318px */
@@ -627,13 +648,13 @@ margin-left: 10rem ;
                 left: 1.5rem;
                 /* margin: 0 auto; */
             }}
-    @media (max-width: 28.8125em) {  /* 1318px */
+    @media (max-width: 28.875em) {  /* 1318px */
         .story-text-responsive-3{
                 width: 50% !important;
                 margin: 0% !important;
-                margin-top: 5rem !important;
+                margin-top: 4rem !important;
                 position: relative;
-                left: 8rem !important;
+                left: 8.5rem !important;
                 /* margin-right: 10.25rem !important; */
                 }}
                 
@@ -671,7 +692,7 @@ margin-left: 10rem ;
                 margin: 0% !important;
                 /* margin-top: 26rem !important; */
                 position: relative;
-                top: 20rem;
+                top: 21rem;
                 left: -9.5rem !important;
                 /* margin-right: 10.25rem !important; */
                 }}
@@ -766,10 +787,17 @@ top: -4.5rem;
         top: -4.5rem;
             }}
             
+        @media (max-width: 28.875em) {  /* 1318px */
+            .story-img-1{
+        position: relative;
+        margin-top: 0 !important;
+        left: 11.5rem;
+        /* top: -4.5rem; */
+            }}
         @media (max-width: 28.8125em) {  /* 1318px */
             .story-img-1{
         position: relative;
-        margin:auto 0 !important;
+margin: auto 0 !important;
         left: 15rem;
         /* top: -4.5rem; */
             }}
@@ -823,7 +851,7 @@ margin-left: 4.5rem;
             left: -6rem !important;
             }}
             
-        @media (max-width: 28.8125em) {  /* 1318px */
+        @media (max-width: 28.875em) {  /* 1318px */
             .story-img-2-responsive{
               /* margin-top: 5rem !important; */
                 position: relative;
@@ -991,17 +1019,17 @@ margin-left: 4.5rem;
         left: -25.5rem !important;
     }}
     
-    @media (max-width: 28.8125em) {  /* 1318px */
+    @media (max-width: 28.875em) {  /* 1318px */
         .story-img-responsive-3{
             position: relative;
-            top: 22.5rem;
-            left:-17rem !important;
+            top: 24rem;
+            left:-15rem !important;
         }}
         
     @media (max-width: 26.1875em) {  /* 1318px */
         .story-img-responsive-3{
             position: relative;
-            top: 23rem !important;
+            top: 24.5rem !important;
             left:-14rem !important;
         }}
         
@@ -1015,7 +1043,7 @@ margin-left: 4.5rem;
     @media (max-width: 23.25em) {  /* 1318px */
         .story-img-responsive-3{
             position: relative;
-            top: -1rem !important;
+            top: -2rem !important;
             left:-11.5rem !important;
         }}
         
@@ -1029,7 +1057,7 @@ margin-left: 4.5rem;
         @media (max-width: 20.0625em) {  /* 1318px */
             .story-img-responsive-3{    
                 position: relative;
-                top: -1rem !important;
+                top: -2rem !important;
                 left:-9rem !important;
                 }}
 @media (max-width: 60em) { /* 1318px */
@@ -1122,11 +1150,11 @@ margin-left: 4.5rem;
         left: -25.5rem !important;
     }}
     
-    @media (max-width: 28.8125em) {  /* 1318px */
+    @media (max-width: 28.875em) {  /* 1318px */
         .story-img-responsive-4{
             position: relative;
-            top: 19rem !important;
-            left:-17rem !important;
+            top: 19.5rem !important;
+            left:-15rem !important;
         }}
         
         @media (max-width: 26.1875em) {  /* 1318px */
@@ -1170,29 +1198,60 @@ margin-left: 4.5rem;
     margin-left: 2rem;
 }
  
-/*
-.card-head{
-    padding-top:5rem;
-    width: 15rem;
-    text-align: left;
-    float: left;
-    margin: auto;
-} */
+/* Footer */
 
+.footer{
+    position: relative;
+    top: 10rem;
+    margin-top: 15rem;
+}
+@media (max-width: 60em) {  /* 1318px */
+    .footer{
+        margin-top: 42rem;
+    }}
 
+    @media (max-width: 37.125em) {  /* 1318px */
+        .footer{
+            margin-top: 52rem;
+        }}
 
-/* RESPONSIVE */
-/* Media Query */
+        @media (max-width: 29em) {  /* 1318px */
+            .footer{
+                margin-top: 58rem;
+            }}
+    
+            @media (max-width: 28.875em) {  /* 1318px */
+                .footer{
+                    margin-top: 70rem !important;
+                }}
 
-@media (max-width: 75em) {  /* 1200px */
-    html{
-    font-size:80.25%;/*1 rem = 9px, 9/16 = 50% */
-}}
+                @media (max-width: 25.25em) {  /* 1318px */
+                    .footer{
+                        margin-top: 73rem !important;
+                    }}
+    
+                    @media (max-width: 24.125em) {  /* 1318px */
+                        .footer{
+                            margin-top: 80rem !important;
+                        }}
 
+                        @media (max-width: 21.375em) {  /* 1318px */
+                            .footer{
+                                margin-top: 86rem !important;
+                            }}
 
+                        @media (max-width: 20.875em) {  /* 1318px */
+                            .footer{
+                                margin-top: 86rem !important;
+                            }}
 
+                            @media (max-width: 20.75em) {  /* 1318px */
+                                .footer{
+                                    margin-top: 90rem !important;
+                                }}
 
-
-
-
+                                @media (max-width: 19.625em) {  /* 1318px */
+                                    .footer{
+                                        margin-top: 95rem !important;
+                                    }}
 
